--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -26,7 +26,7 @@ body {
 }
 
 .button-container button {
-    margin:  0 5px;
+    margin:  0 3px;
     padding: 5px 10px;
     font-size: 8px;
     border-radius: 20px;
@@ -132,17 +132,46 @@ input {
 
   /*Modal*/
   .overlay {
-    position: absolute;
-    left: 0;
+    position: fixed;
     top: 0;
-    width: 100vw;
-    height: 100vh;
+    left: 0;
+    right: 0;
+    bottom: 0;
     background-color: rgba(0, 0, 0, 0.5);
     display: flex;
     justify-content: center;
     align-items: center;
   }
   
+  .confirmation-modal {
+    background-color: #fff;
+    padding: 20px;
+    border-radius: 8px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    text-align: center;
+    max-width: 400px;
+  }
+  .confirmation-modal h3 {
+    color: #c26262; 
+  }
+  
+  .confirmation-modal p {
+    margin-top: 10px;
+  }
+  
+  .confirmation-modal button {
+    margin-top: 20px;
+    padding: 8px 16px;
+    background-color: #c26262; /* Set the button background color */
+    color: #fff;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+  }
+  
+  .confirmation-modal button:hover {
+    background-color: #c26262; 
+  }
 .modal{
     width: 500px;
     background-color: rgb(255, 255, 255);
@@ -165,7 +194,7 @@ input {
 }
 
 .modal .form-title-container button:active {
-    color: rgb(255, 50, 50);
+    color: #c26262;
 
 }
 
@@ -250,9 +279,9 @@ input {
     padding: 10px;
     margin-top: 20px;
     width: 100%; 
-    max-width: 600px; 
+    max-width: 400px; 
     margin-left: auto;
-    margin-right: auto;
+    margin-right:auto;
   }
   
   
@@ -266,6 +295,10 @@ input {
   
 
   .comment {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
 
     border: 1.5px solid rgb(52, 110, 168);
     color: rgb(52, 110, 168);
@@ -285,6 +318,12 @@ input {
 
 .view {
 
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    margin-left: 10px;
+    padding: 5px 5px;
     border: 1.5px solid rgb(182, 156, 6);
     color: rgb(182, 156, 6);
     text-transform: uppercase;
@@ -301,6 +340,8 @@ input {
 }
 
 .close {
+    display: block;
+    margin: 0 auto;
 
     border-radius: 20px;
     border: 1.5px solid rgb(67, 10, 9);
@@ -317,3 +358,6 @@ input {
     background-color: rgb(67, 10, 9);
     color: rgb(255, 255, 255);
 }
+
+
+  
